test/associative/waynew/indef8-fail2.good
0.0 1.2 3.4
5.6 0.0 0.0
indef8-fail2.chpl:19: error: halt reached - zippered associative array does not match the iterated domain
