test/associative/waynew/indef8-fail2.prediff
#!/usr/bin/env bash

head -3 $2 > $2.new
mv $2.new $2
